# modern-python-cheat-sheet

./: .devcontainer.json  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/99_MISC/: TODO
notebooks/99_OOP/: TODO.md
notebooks/99_testing/: TODO
resources/logo/: logo.pxd
