[tool.poetry]
name = "Modern Python Cheat Sheet"
version = "1.0.0"
description = "Modern Python Cheat Sheet"
authors = ["David Dahan <david.dahan3@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
pydantic = "*"    # https://github.com/pydantic/pydantic

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
ipdb = "*"      # https://github.com/gotcha/ipdb
pytest = "*"    # https://github.com/pytest-dev/pytest
ipykernel = "*" # https://github.com/ipython/ipykernel

[tool.ruff]
line-length = 88
exclude = ['.git', '__pycache__', '__init__.py', '.mypy_cache', '.pytest_cache']
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
lint.ignore = [
  "E501", # line too long
  "C901", # Comprehension is too complex (11 > 10)
  "W191", # indentation contains tabs
  "E402",
]
lint.unfixable = ["F841"]
extend-include = ["*.ipynb"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
